--- a/Analizador Lexico/nbproject/project.properties
+++ b/Analizador Lexico/nbproject/project.properties
@@ -28,12 +28,10 @@ dist.jar=${dist.dir}/Analizador_Lexico.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jflex-1.6.1.jar=lib\\jflex-1.6.1.jar
-file.reference.jflex-1.6.1.jar-1=..\\jflex-1.6.1\\jflex-1.6.1\\lib\\jflex-1.6.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jflex-1.6.1.jar}:\
-    ${file.reference.jflex-1.6.1.jar-1}
+    ${file.reference.jflex-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
